	mutex over all quest-related structures in GameCharacter rather than
	attempting to coordinate concurrent structures.
	* Player stats lock moved to LoggedInPlayer because login server players are
	immutable.

2012-11-07  GoldenKevin  (revision 159)

	* All commands rewritten to make use of a new argument parsing solution that
	does away with argument counts and argument indices in favor of a iterator
	interface.

2012-11-07  GoldenKevin  (revision 160)

	* Started work on experimental system that facilitates making commands apply
	for characters other than the calling character. The !tp, !info, !skill,
	!stat, and !give commands have been retrofitted to support this system.
	Currently the system only works on players that are either offline or on the
	same channel as the calling character.
	* Added !map command to change map of other characters or to warp to a
	specific spawn point in a map. When used with only one argument, it behaves
	identically to the /m command.

2012-11-09  GoldenKevin  (revision 161)

	* Fixed compilation error in WorldChannel.
	* CommandTarget.mutate accepts a List of properties to change rather than
	a Map.
	* !heal, !maxstats, !maxequips, and !maxall now support the command target
	system.
	* OfflineCharacterCommandTarget is now manually committed once after all
	updates have been made, in order to speed up commands such as !maxall.

2012-11-09  GoldenKevin  (revision 162)

	* Fixed invisible throwing stars or arrows when attacking with a claw or
	(cross) bow.
	* Fixed denying buddy invites.

2012-11-09  GoldenKevin  (revision 163)

	* Started work on experimental system that facilitates the creation of
	commands that could be called by a GM connecting over telnet.
	* !town now supports the command target system.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.